SCSS | Correction du z-index trop fort de la grille

--- a/client/src/app/assets/scss/components/_components.grid.scss
+++ b/client/src/app/assets/scss/components/_components.grid.scss
@@ -108,7 +108,7 @@
 }
 
 .grid figure figcaption > a {
-	z-index: 1000;
+	z-index: 10;
 	text-indent: 200%;
 	white-space: nowrap;
 	font-size: 0;
